# not-too-extensible-records

./: X.hs  disjoint-records.cabal
